--- a/src/style.css
+++ b/src/style.css
@@ -1,14 +1,29 @@
+html, body, #app {
+  height: 100%;
+  box-sizing: border-box;
+  margin: 0;
+}
+
 #app {
   font-family: Avenir, Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  text-align: center;
-  color: #2c3e50;
-  margin-top: 60px;
+  display: flex;
+  flex-direction: column;
+  padding: 15px;
+  align-items: center;
+}
+
+#errorText {
+  color: #DC2626;
+}
+
+.infoContainer {
+  align-self: flex-start;
 }
 
 .node {
-  fill: steelblue;
+  fill: #BFDBFE;
   stroke: none;
 }
 
@@ -24,6 +39,7 @@
 }
 
 .label {
-  fill: whitesmoke;
+  fill: #EA580C;
   font-size: 15px;
+  font-family: Consolas, monaco, monospace;
 }
